--- a/Group_data_analysis_375.ipynb
+++ b/Group_data_analysis_375.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPvz1FHeqPw24CbZpTZFN2x",
+      "authorship_tag": "ABX9TyOMigBzRVFg3V57U8Frt4tX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SmYNh-z6CXyU",
+        "colab_type": "text"
+      },
+      "source": [
+        "We start by importing the data from the github\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "n0ojkqhUqF9k",
@@ -41,6 +51,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "c4or_QniCbpg",
+        "colab_type": "text"
+      },
+      "source": [
+        "Then we import any python tools we need"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "EUq0RjO93o2g",
@@ -53,10 +73,21 @@
         "import pandas as pd  # for data\n",
         "import matplotlib.pyplot as plt #for plotting\n",
         "%matplotlib inline \n",
-        "#so plots stay in this page\n"
+        "#so plots stay in this page\n",
+        "print('Libraries ready')\n"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bbgl8cEvCiNM",
+        "colab_type": "text"
+      },
+      "source": [
+        "We create some variables of condition names, count the participants, and list out the frequencies"
+      ]
     },
     {
       "cell_type": "code",
@@ -76,7 +107,11 @@
         "\n",
         "condition_mean = {}; # place to save means for each condition\n",
         "condition_std = {};\n",
-        "freqs = list(range(30)) # create an array of the frequencies from 1 to 30"
+        "freqs = list(range(30)) # create an array of the frequencies from 1 to 30\n",
+        "freqs = [f + 1 for f in freqs] # add one to each item in freqs\n",
+        "df = pd.read_csv('375Data_2020/ClosedFrontal.csv') #read in the data file for one condition to get subject numbers\n",
+        "num_subs = len(df.index) # length of the file to get number of subjects\n",
+        "print('We have a total of ' + str(num_subs) + ' Participants to analyze') #str() turns the number into a string we can print"
       ],
       "execution_count": 0,
       "outputs": []
@@ -104,6 +139,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ymhlkW_VCKrP",
+        "colab_type": "text"
+      },
+      "source": [
+        "We can add standard error error bars around each line:"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "oNd_PNEx4RX6",
@@ -114,7 +159,7 @@
         "for condition in conditions: # For each condition\n",
         "\tdf = pd.read_csv('375Data_2020/' + condition + '.csv') #read in the data file for that condition\n",
         "\tcondition_mean[condition] = df.mean(); #average over participants for that condition and save\t\t\t\t\t\t\n",
-        "\tcondition_std[condition] = df.std() / np.sqrt(76); #standard deviation over participants\n",
+        "\tcondition_std[condition] = df.std() / np.sqrt(num_subs); #standard deviation over participants\n",
         "\ty = condition_mean[condition][1:]\n",
         "\terr = condition_std[condition][1:]\n",
         "\tplt.plot(freqs, y ) #plot data for that condition\n",
@@ -129,6 +174,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "alaodR-xCOP7",
+        "colab_type": "text"
+      },
+      "source": [
+        "We may also benefit from subtracting the spectra average from each spectra before doing the analysis to remove big differences: Here we will focus just on the posterior electrodes:"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "xtN6UpcL4kyZ",
@@ -137,16 +192,20 @@
       },
       "source": [
         "# find mean over each subject to remove between subject differences\n",
-        "freqs = list(range(29))\n",
+        "conditions = [ #list of condition names of each file\n",
+        "\t'ClosedTemporal',\n",
+        "\t'OpenTemporal'\n",
+        "]\n",
+        "\n",
         "for condition in conditions: # For each condition\n",
         "\tdf = pd.read_csv('375Data_2020/' + condition + '.csv') #read in the data file for that condition\n",
         "\tdf = df.drop(['Lab ID Number'], axis=1)\n",
         "\tsub_mean = df.mean(axis=1)\n",
         "\tdf = df - np.tile(sub_mean, (30, 1)).transpose()\n",
         "\tcondition_mean[condition] = df.mean(); #average over participants for that condition and save\t\t\t\t\t\t\n",
-        "\tcondition_std[condition] = df.std() / np.sqrt(76); #standard deviation over participants\n",
-        "\ty = condition_mean[condition][1:]\n",
-        "\terr = condition_std[condition][1:]\n",
+        "\tcondition_std[condition] = df.std() / np.sqrt(num_subs); #standard deviation over participants\n",
+        "\ty = condition_mean[condition]\n",
+        "\terr = condition_std[condition]\n",
         "\tplt.plot(freqs, y ) #plot data for that condition\n",
         "\tplt.fill_between(freqs, y-err, y+err )\n",
         "\n",
